--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
-    "react-fontawesome": "^1.3.1"
+    "react-fontawesome": "^1.3.1",
+    "react-gravatar": "^2.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
